[project]
name = "graphicscard-market"
version = "0.1.0"
description = "A simulation of a GPU market with economic agents."
authors = [
    { name = "Miguel Angel Alvarez Fernandez" }
]
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }

# Use an array for dependencies as per PEP 621
dependencies = [
    "sqlalchemy>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
